<resources>
    <string name="admobid">ca-app-pub-8158775470106184</string>
    <string name="admobunit">ca-app-pub-8158775470106184/7285030050</string>
    <string name="app_name">Visualize</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">Visualize</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="placeholder_hintusername">Email</string>
    <string name="placeholder_hintpassword">Password</string>
    <string name="placeholder_textkosong">Cannot Blank</string>
    <string name="placeholder_loginberhasil">@string/endpoint_loginberhasil</string>
    <string name="placeholder_buttonlogin">LOGIN</string>
    <string name="placeholder_toregister">Doesn\'t Have an Account? Register Here</string>
    <string name="placeholder_hintnama">Name</string>
    <string name="placeholder_hintalamat">Address</string>
    <string name="placeholder_hintnotelp">Phone Number</string>
    <string name="placeholder_buttonregister">Register</string>
    <string name="placeholder_tologin">Have an Account? Login Her</string>
    <string name="placeholder_logout">Logout</string>

    <string name="placeholder_hintcreategrup">Create New Group</string>
    <string name="placeholder_hintaddcontact">Add Contact</string>
    <string name="placeholder_hintnamagrup">Group Name</string>
    <string name="placeholder_hintprefillgrup"></string>
    <string name="placeholder_hintnamakontak">Contact\'s Name</string>
    <string name="placeholder_hintmasaaktifgrup">Expired (Days)</string>
    <string name="placeholder_buttoncreategrup">Create</string>
    <string name="placeholder_buttonaddcontact">Add Contact</string>
    <string name="placeholder_updategrup">Update Group</string>
    <string name="placeholder_hapusgrup">Delete Group</string>
    <string name="title_activity_detail_group">DetailGroup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="placeholder_memberlist">Members</string>
    <string name="placeholder_peta">Maps</string>
    <string name="placeholder_pesan">Message</string>
    <string name="placeholder_locationlist">Destinations</string>
    <string name="placeholder_notelpcontact">Phone Number</string>
    <string name="placeholder_destinationaddress">Destination Address</string>
    <string name="placeholder_invitemember">Add Member</string>
    <string name="placeholder_kirim">Send</string>
    <string name="placeholder_sendmessage">Send Message</string>
    <string name="placeholder_adddestination">Add Destinations</string>
    <string name="title_activity_route_destinations">Destinations</string>
    <string name="placeholder_change_profile">Change Profile</string>
    <string name="placeholder_change_password">Change Password</string>
    <string name="placeholder_oldpassword">Password Lama</string>
    <string name="placeholder_newpassword">Password Baru</string>
    <string name="placeholder_repeatpassword">Ulangi Password</string>
    <string name="placeholder_guidelines"><![CDATA[
<p>Visualize is a family or team member of group Locator simplifies life in the digital world by making it easy to stay connected to the people who matter most.</p>
<p>Follow these steps to turn on Visualize and enable detection for yourself and members</p>
<p style="padding-left: 30px;">1. Launch Visualize</p>
<p style="padding-left: 30px;">2. Turn on GPS on your mobile</p>
<p style="padding-left: 30px;">3. Add Contact in the menu</p>
<p style="padding-left: 30px;">4. Create Group to track your members</p>
<p style="padding-left: 30px;">5. Add contact for new member of group</p>
<p style="padding-left: 30px;">6. Click maps for your members</p>
<p>&nbsp;</p>
<p>Create destinations to guide your group members</p>
<p style="padding-left: 30px;">1. Click add marker</p>
<p style="padding-left: 30px;">2. Drag the maps</p>
<p style="padding-left: 30px;">3. Locate your marker to the destination</p>
<p style="padding-left: 30px;">4. Select locations and save</p>
<p style="padding-left: 30px;">5. Back to step 1, then add another destinations</p>
<p style="padding-left: 30px;">&nbsp;</p>
<p>Help us to grow, send donations via Paypal mediafaiza@gmail.com</p>
]]></string>
    <string name="guideline">Guideline</string>
    <string name="sample_message">Pesan\r\nbanyak line \r\nterus terusan \r\n\r\ndengan menambahkan enter</string>
    <string name="tdo">TODO</string>
</resources>
